# JREE

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: deploy.md  ingest.md  search.md  test.md
backend/: __init__.py  config.py  main.py  models.py  search.py  search_local.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ResultCard.tsx  SearchBar.tsx
scripts/: download_scribesalad.py  embed_and_index.py  embed_local.py  fetch_metadata_ytdlp.py  fetch_youtube_metadata.py  parse_metadata.py  process_all_transcripts.py  process_chunks.py  process_with_metadata.py  scrape_transcripts.py
tests/: __init__.py  test_search.py
